# shiny-rpc

./: Taskfile.yaml  mkdocs.yml  pyproject.toml
docs/: index.md
docs/standard/messages/: index.md
