[tool.poetry]
name = "shiny-rpc"
version = "0.1.0"
description = "Minimalistic RPC standard for your microservices"
authors = ["anton <tuulienenkeli@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
